src/test/ui/typeck/issue-91334.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-91334.rs:9:20
   |
LL | fn f(){||yield(((){),
   |                   -^ mismatched closing delimiter
   |                   |
   |                   unmatched opening delimiter begins here

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `{`
  --> $DIR/issue-91334.rs:9:19
   |
LL | fn f(){||yield(((){),
   |                   ^
   |                   |
   |                   expected one of `)`, `,`, `.`, `?`, or an operator
   |                   help: missing `,`

error[E0601]: `main` function not found in crate `issue_91334`
  --> $DIR/issue-91334.rs:9:23
   |
LL | fn f(){||yield(((){),
   |                       ^ consider adding a `main` function to `$DIR/issue-91334.rs`

error[E0308]: mismatched types
  --> $DIR/issue-91334.rs:9:8
   |
LL | fn f(){||yield(((){),
   |       -^^^^^^^^^^^^^^^ expected `()`, found generator
   |       |
   |       help: a return type might be missing here: `-> _`
   |
   = note: expected unit type `()`
              found generator `[generator@$DIR/issue-91334.rs:9:8: 9:10]`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0601.
For more information about an error, try `rustc --explain E0308`.
